Add function of google maps in project for visualizate localization of UBS

--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,8 @@ TemRemedioAi/.idea/copyright/profiles_settings.xml
 TemRemedioAi/.idea/encodings.xml
 TemRemedioAi/.idea/misc.xml
 TemRemedioAi/.idea/modules.xml
+TemRemedioAi/.idea/gradle.xml
+TemRemedioAi/.idea/runConfigurations.xml
 TemRemedioAi/.idea/scopes/scope_settings.xml
 TemRemedioAi/.idea/vcs.xml
 TemRemedioAi/*.iml
