--- a/TemRemedioAi/app/build.gradle
+++ b/TemRemedioAi/app/build.gradle
@@ -18,11 +18,13 @@ apply plugin: 'com.android.application'
          }
      }
  }
- 
- dependencies {
-     compile fileTree(dir: 'libs', include: ['*.jar'])
-     testCompile 'junit:junit:4.12'
-     compile 'com.android.support:appcompat-v7:23.3.0'
-     compile 'com.android.support:design:23.3.0'
- 
- }
+
+dependencies {
+    compile fileTree(include: ['*.jar'], dir: 'libs')
+    testCompile 'junit:junit:4.12'
+    compile 'com.android.support:appcompat-v7:23.3.0'
+    compile 'com.android.support:design:23.3.0'
+    compile 'com.android.support:cardview-v7:23.3.0'
+    compile 'com.android.support:recyclerview-v7:23.3.0'
+    compile 'com.google.android.gms:play-services:8.4.0'
+}
