--- a/TemRemedioAi/app/src/main/AndroidManifest.xml
+++ b/TemRemedioAi/app/src/main/AndroidManifest.xml
@@ -14,14 +14,14 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
-        android:name=".ParseInitializer"
+        android:name="com.gppmds.tra.temremdioa.controller.ParseInitializer"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".MainActivity"
+            android:name="com.gppmds.tra.temremdioa.controller.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -43,11 +43,11 @@
             android:value="@string/google_maps_key" />
 
         <activity
-            android:name=".UbsMapsActivity"
+            android:name="com.gppmds.tra.temremdioa.controller.UbsMapsActivity"
             android:label="@string/title_activity_ubs_maps">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.tra.gppmds.temremdioa.MainActivity" />
+                android:value="com.gppmds.tra.temremdioa.controller.MainActivity" />
         </activity>
     </application>
 
