--- a/TemRemedioAi/app/src/main/AndroidManifest.xml
+++ b/TemRemedioAi/app/src/main/AndroidManifest.xml
@@ -29,6 +29,11 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
+            <meta-data
+                android:name="android.app.serchable"
+                android:resource="@xml/searchable" />
+
         </activity>
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
