--- a/TemRemedioAi/app/src/main/AndroidManifest.xml
+++ b/TemRemedioAi/app/src/main/AndroidManifest.xml
@@ -56,12 +56,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity
             android:name="com.gppmds.tra.temremdioa.controller.UbsMapsActivity"
             android:label="@string/title_activity_ubs_maps">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.gppmds.tra.temremdioa.controller.MainActivity" />
+                android:value="com.gppmds.tra.temremdioa.controller.UbsMapsActivity" />
         </activity>
         <!--
  ATTENTION: This was auto-generated to add Google Play services to your project for
