--- a/TemRemedioAi/app/src/main/AndroidManifest.xml
+++ b/TemRemedioAi/app/src/main/AndroidManifest.xml
@@ -24,13 +24,7 @@
             android:name="com.gppmds.tra.temremdioa.controller.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
-            <intent-filter>
-                <action android:name="android.intent.action.SEARCH" />
-            </intent-filter>
 
-            <meta-data
-                android:name="android.app.default_searchable"
-                android:value=".MainActivity" />
             <meta-data
                 android:name="android.app.searchable"
                 android:resource="@xml/searchable" />
@@ -81,6 +75,12 @@
         </activity>
         <activity android:name="com.gppmds.tra.temremdioa.controller.SelectUBSActivity"
             android:label="@string/title_activity_select_UBS">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.gppmds.tra.temremdioa.controller.MainActivity" />
+        </activity>
+        <activity android:name="com.gppmds.tra.temremdioa.controller.SelectRemedioActivity"
+            android:label="@string/title_activity_select_Remedio">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.gppmds.tra.temremdioa.controller.MainActivity" />
