--- a/TemRemedioAi/app/src/main/AndroidManifest.xml
+++ b/TemRemedioAi/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
         <activity
             android:name="com.gppmds.tra.temremdioa.controller.MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -82,7 +82,9 @@
                 android:value="com.gppmds.tra.temremdioa.controller.MainActivity" />
         </activity>
         <activity android:name="com.gppmds.tra.temremdioa.controller.LogInActivity" />
-        <activity android:name="com.gppmds.tra.temremdioa.controller.SignUpActivity"></activity>
+        <activity android:name="com.gppmds.tra.temremdioa.controller.SignUpActivity" />
+        <activity android:name="com.gppmds.tra.temremdioa.controller.UserProfile"
+            android:label="@string/user"></activity>
     </application>
 
 </manifest>
