--- a/TemRemedioAi/app/src/main/AndroidManifest.xml
+++ b/TemRemedioAi/app/src/main/AndroidManifest.xml
@@ -79,7 +79,13 @@
                 android:value="com.gppmds.tra.temremdioa.controller.MainActivity" />
         </activity>
         <activity android:name="com.gppmds.tra.temremdioa.controller.SelectRemedioActivity"
-            android:label="@string/title_activity_select_Remedio">
+        android:label="@string/title_activity_select_Remedio">
+        <meta-data
+            android:name="android.support.PARENT_ACTIVITY"
+            android:value="com.gppmds.tra.temremdioa.controller.MainActivity" />
+    </activity>
+        <activity android:name="com.gppmds.tra.temremdioa.controller.AppPreferenceActivity"
+            android:label="@string/action_settings">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.gppmds.tra.temremdioa.controller.MainActivity" />
