--- a/TemRemedioAi/app/build.gradle
+++ b/TemRemedioAi/app/build.gradle
@@ -21,12 +21,20 @@ apply plugin: 'com.android.application'
              testCoverageEnabled true
          }
      }
+     testOptions {
+         unitTests.returnDefaultValues = true
+     }
  }
+
+repositories {
+    jcenter()
+}
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     testCompile "org.robolectric:robolectric:3.1"
+    testCompile "org.mockito:mockito-core:1.+"
 
     androidTestCompile 'com.android.support:support-annotations:23.3.0'
     androidTestCompile 'com.android.support.test:runner:0.4.1'
@@ -45,4 +53,6 @@ dependencies {
     compile 'com.android.support:cardview-v7:23.3.0'
     compile 'com.android.support:recyclerview-v7:23.3.0'
     compile 'com.google.android.gms:play-services:8.4.0'
+    compile 'junit:junit:4.12'
+    compile 'org.mockito:mockito-core:1.10.19'
 }
