--- a/TemRemedioAi/app/src/main/AndroidManifest.xml
+++ b/TemRemedioAi/app/src/main/AndroidManifest.xml
@@ -6,8 +6,8 @@
     <!-- User Permissions -->
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"></uses-permission>
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"></uses-permission>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
     <application
         android:name="com.gppmds.tra.temremdioa.controller.ParseInitializer"
