--- a/TemRemedioAi/app/src/main/AndroidManifest.xml
+++ b/TemRemedioAi/app/src/main/AndroidManifest.xml
@@ -83,7 +83,7 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.gppmds.tra.temremdioa.controller.MainActivity" />
         </activity>
-        <activity android:name="com.gppmds.tra.temremdioa.controller.SelectRemedioActivity"
+        <activity android:name="com.gppmds.tra.temremdioa.controller.SelectMedicineActivity"
             android:label="@string/title_activity_select_Remedio">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
