--- a/TemRemedioAi/app/build.gradle
+++ b/TemRemedioAi/app/build.gradle
@@ -11,6 +11,7 @@ apply plugin: 'com.android.application'
          versionCode 1
          versionName "1.0"
          testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+         multiDexEnabled true
      }
      buildTypes {
          release {
@@ -23,6 +24,10 @@ apply plugin: 'com.android.application'
      }
      testOptions {
          unitTests.returnDefaultValues = true
+     }
+
+     dexOptions {
+         javaMaxHeapSize "4g"
      }
  }
 
