--- a/TemRemedioAi/app/src/main/AndroidManifest.xml
+++ b/TemRemedioAi/app/src/main/AndroidManifest.xml
@@ -83,8 +83,10 @@
         </activity>
         <activity android:name="com.gppmds.tra.temremdioa.controller.LogInActivity" />
         <activity android:name="com.gppmds.tra.temremdioa.controller.SignUpActivity" />
-        <activity android:name="com.gppmds.tra.temremdioa.controller.UserProfile"
-            android:label="@string/user"></activity>
+        <activity
+            android:name="com.gppmds.tra.temremdioa.controller.UserProfile"
+            android:label="@string/user" />
+        <activity android:name="com.gppmds.tra.temremdioa.controller.Inform"></activity>
     </application>
 
 </manifest>
