--- a/TemRemedioAi/app/src/main/AndroidManifest.xml
+++ b/TemRemedioAi/app/src/main/AndroidManifest.xml
@@ -19,13 +19,13 @@
 
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label="@string/appName"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
 
             android:name="com.gppmds.tra.temremdioa.controller.MainActivity"
-            android:label="@string/app_name"
+            android:label="@string/appName"
             android:theme="@style/AppTheme.NoActionBar">
 
             <meta-data
@@ -57,7 +57,7 @@
 
         <activity
             android:name="com.gppmds.tra.temremdioa.controller.UbsMapsActivity"
-            android:label="@string/title_activity_ubs_maps">
+            android:label="@string/titleActivityUbsMaps">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.gppmds.tra.temremdioa.controller.MainActivity" />
@@ -72,19 +72,19 @@
 
         <activity
             android:name="com.gppmds.tra.temremdioa.controller.AboutActivity"
-            android:label="@string/title_activity_about">
+            android:label="@string/titleActivityAbout">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.gppmds.tra.temremdioa.controller.MainActivity" />
         </activity>
         <activity android:name="com.gppmds.tra.temremdioa.controller.SelectUBSActivity"
-            android:label="@string/title_activity_select_UBS">
+            android:label="@string/titleActivitySelectUbs">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.gppmds.tra.temremdioa.controller.MainActivity" />
         </activity>
         <activity android:name="com.gppmds.tra.temremdioa.controller.SelectMedicineActivity"
-            android:label="@string/title_activity_select_Remedio">
+            android:label="@string/titleActivitySelectMedicine">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.gppmds.tra.temremdioa.controller.MainActivity" />
