--- a/TemRemedioAi/app/build.gradle
+++ b/TemRemedioAi/app/build.gradle
@@ -19,6 +19,10 @@ apply plugin: 'com.android.application'
      }
  }
 
+repositories {
+    maven { url "https://jitpack.io" }
+}
+
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
@@ -28,4 +32,5 @@ dependencies {
     compile 'com.android.support:cardview-v7:23.3.0'
     compile 'com.android.support:recyclerview-v7:23.3.0'
     compile 'com.google.android.gms:play-services:8.4.0'
+    compile 'com.github.PhilJay:MPAndroidChart:v2.2.5'
 }
